[package]
name = "poly-last-new"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot_test"
path = "src/bin/bot_test.rs"

[[bin]]
name = "bot_real"
path = "src/bin/bot_real.rs"

[[bin]]
name = "pnl"
path = "src/bin/pnl.rs"

[dependencies]
anyhow       = "1"
async-trait  = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
csv          = "1"
dotenvy      = "0.15"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["std"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util      = "0.3"
uuid              = { version = "1", features = ["v4"] }

polymarket-client-sdk = { version = "0.4.4", features = ["clob", "gamma", "data"] }
alloy   = { version = "1.7.3", features = ["sol-types", "contract", "providers", "network", "transport-http", "signer-local", "signers", "rpc-types"] }
rustls  = { version = "0.23", features = ["aws_lc_rs"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
